// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Registration result component renders registration complete properly 1`] = `
<View
  flex={1}
  flexDirection="column"
  justifyContent="space-between"
  m={4}
  mt={6}
  style={
    Array [
      Object {
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
        "marginBottom": 20,
        "marginLeft": 20,
        "marginRight": 20,
        "marginTop": 40,
      },
    ]
  }
>
  <View>
    <View
      alignItems="center"
      style={
        Array [
          Object {},
        ]
      }
    >
      <Image
        height={20}
        source={
          Object {
            "testUri": "../../../images/circle-check-green.png",
          }
        }
        style={
          Array [
            Object {
              "height": 20,
              "width": 20,
            },
          ]
        }
        width={20}
      />
      <Text
        fontFamily="AGaramondPro-Semibold"
        fontSize="22px"
        lineHeight="28px"
        m={4}
        mb={4}
        mt={2}
        style={
          Array [
            Object {
              "fontFamily": "AGaramondPro-Semibold",
              "fontSize": 22,
              "lineHeight": 28,
              "marginBottom": 40,
              "marginLeft": 40,
              "marginRight": 40,
              "marginTop": 20,
              "textAlign": "center",
            },
            Object {},
          ]
        }
        textAlign="center"
      >
        Registration complete
      </Text>
      <View
        mb={5}
        style={
          Array [
            Object {
              "display": "flex",
              "marginBottom": 5,
            },
          ]
        }
      >
        <Text
          color="black60"
          fontFamily="Unica77LL-Regular"
          fontSize="14px"
          lineHeight="20px"
          style={
            Array [
              Object {
                "color": "#666",
                "fontFamily": "Unica77LL-Regular",
                "fontSize": 14,
                "lineHeight": 20,
                "textAlign": "center",
              },
              Object {},
            ]
          }
          textAlign="center"
        >
          Thank you for registering. You’re now eligible
to bid on works in this sale.
        </Text>
        <Text />
      </View>
    </View>
  </View>
  <View
    accessible={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "rgba(255, 255, 255, 1)",
        "borderColor": "rgba(229, 229, 229, 1)",
        "borderRadius": 2,
        "borderWidth": 2,
        "height": 50,
        "justifyContent": "center",
        "opacity": 1,
      }
    }
  >
    <Text
      color="black"
      fontFamily="Unica77LL-Medium"
      fontSize="14px"
      lineHeight="24px"
      style={
        Array [
          Object {
            "color": "black",
            "fontFamily": "Unica77LL-Medium",
            "fontSize": 14,
            "lineHeight": 24,
          },
          Object {},
        ]
      }
    >
      Continue
    </Text>
  </View>
</View>
`;

exports[`Registration result component renders registration error properly 1`] = `
<View
  flex={1}
  flexDirection="column"
  justifyContent="space-between"
  m={4}
  mt={6}
  style={
    Array [
      Object {
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
        "marginBottom": 20,
        "marginLeft": 20,
        "marginRight": 20,
        "marginTop": 40,
      },
    ]
  }
>
  <View>
    <View
      alignItems="center"
      style={
        Array [
          Object {},
        ]
      }
    >
      <Image
        height={20}
        source={
          Object {
            "testUri": "../../../images/circle-x-red.png",
          }
        }
        style={
          Array [
            Object {
              "height": 20,
              "width": 20,
            },
          ]
        }
        width={20}
      />
      <Text
        fontFamily="AGaramondPro-Semibold"
        fontSize="22px"
        lineHeight="28px"
        m={4}
        mb={4}
        mt={2}
        style={
          Array [
            Object {
              "fontFamily": "AGaramondPro-Semibold",
              "fontSize": 22,
              "lineHeight": 28,
              "marginBottom": 40,
              "marginLeft": 40,
              "marginRight": 40,
              "marginTop": 20,
              "textAlign": "center",
            },
            Object {},
          ]
        }
        textAlign="center"
      >
        An error occured
      </Text>
      <View
        mb={5}
        style={
          Array [
            Object {
              "display": "flex",
              "marginBottom": 5,
            },
          ]
        }
      >
        <Text
          color="black60"
          fontFamily="Unica77LL-Regular"
          fontSize="14px"
          lineHeight="20px"
          style={
            Array [
              Object {
                "color": "#666",
                "fontFamily": "Unica77LL-Regular",
                "fontSize": 14,
                "lineHeight": 20,
                "textAlign": "center",
              },
              Object {},
            ]
          }
          textAlign="center"
        >
          Please contact 
          <Text
            onPress={[Function]}
            style={
              Array [
                Object {
                  "textDecorationLine": "underline",
                },
              ]
            }
          >
            support@artsy.net
          </Text>
          
with any questions.
        </Text>
        <Text />
      </View>
    </View>
  </View>
  <View
    accessible={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "rgba(255, 255, 255, 1)",
        "borderColor": "rgba(229, 229, 229, 1)",
        "borderRadius": 2,
        "borderWidth": 2,
        "height": 50,
        "justifyContent": "center",
        "opacity": 1,
      }
    }
  >
    <Text
      color="black"
      fontFamily="Unica77LL-Medium"
      fontSize="14px"
      lineHeight="24px"
      style={
        Array [
          Object {
            "color": "black",
            "fontFamily": "Unica77LL-Medium",
            "fontSize": 14,
            "lineHeight": 24,
          },
          Object {},
        ]
      }
    >
      Continue
    </Text>
  </View>
</View>
`;

exports[`Registration result component renders registration pending properly 1`] = `
<View
  flex={1}
  flexDirection="column"
  justifyContent="space-between"
  m={4}
  mt={6}
  style={
    Array [
      Object {
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
        "marginBottom": 20,
        "marginLeft": 20,
        "marginRight": 20,
        "marginTop": 40,
      },
    ]
  }
>
  <View>
    <View
      alignItems="center"
      style={
        Array [
          Object {},
        ]
      }
    >
      <Image
        height={20}
        source={
          Object {
            "testUri": "../../../images/circle-exclamation.png",
          }
        }
        style={
          Array [
            Object {
              "height": 20,
              "width": 20,
            },
          ]
        }
        width={20}
      />
      <Text
        fontFamily="AGaramondPro-Semibold"
        fontSize="22px"
        lineHeight="28px"
        m={4}
        mb={4}
        mt={2}
        style={
          Array [
            Object {
              "fontFamily": "AGaramondPro-Semibold",
              "fontSize": 22,
              "lineHeight": 28,
              "marginBottom": 40,
              "marginLeft": 40,
              "marginRight": 40,
              "marginTop": 20,
              "textAlign": "center",
            },
            Object {},
          ]
        }
        textAlign="center"
      >
        Registration pending
      </Text>
      <View
        mb={5}
        style={
          Array [
            Object {
              "display": "flex",
              "marginBottom": 5,
            },
          ]
        }
      >
        <Text
          color="black60"
          fontFamily="Unica77LL-Regular"
          fontSize="14px"
          lineHeight="20px"
          style={
            Array [
              Object {
                "color": "#666",
                "fontFamily": "Unica77LL-Regular",
                "fontSize": 14,
                "lineHeight": 20,
                "textAlign": "center",
              },
              Object {},
            ]
          }
          textAlign="center"
        >
          Your registration status is pending.
Please contact 
          <Text
            onPress={[Function]}
            style={
              Array [
                Object {
                  "textDecorationLine": "underline",
                },
              ]
            }
          >
            support@artsy.net
          </Text>
           for
more information.
        </Text>
        <Text />
      </View>
    </View>
  </View>
  <View
    accessible={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "rgba(255, 255, 255, 1)",
        "borderColor": "rgba(229, 229, 229, 1)",
        "borderRadius": 2,
        "borderWidth": 2,
        "height": 50,
        "justifyContent": "center",
        "opacity": 1,
      }
    }
  >
    <Text
      color="black"
      fontFamily="Unica77LL-Medium"
      fontSize="14px"
      lineHeight="24px"
      style={
        Array [
          Object {
            "color": "black",
            "fontFamily": "Unica77LL-Medium",
            "fontSize": 14,
            "lineHeight": 24,
          },
          Object {},
        ]
      }
    >
      Continue
    </Text>
  </View>
</View>
`;
